2007-01-09 Raul Mateos  <raulofpandora@gmail.com>

	* include/languages/*.php: New file for german language. Some
	updates for the rest of files.
	
	* pandoradb_data.sql: Add entry for german language.

2007-01-09 Raul Mateos  <raulofpandora@gmail.com>

	* operation/menu.php: Style correction (not enough).
	
	* include/op.css: Solve small bug with hover in reporting icon.

2007-01-08  Manuel Arostegui <marostegui@artica.es>

	* pandora_console.spec: Changed group.

2007-01-05  Sancho Lerena  <slerena@artica.es>

	Importing data from Azabel brach. This commit is a little
	chaotic :-). Almost all code it's break apart, so no problems
	should not be generated. New graphical console will be called
	"Active console", as temporal name.
	
	* pandora_graphical_console.sql: New SQL for active console.

	* pandora_graphical_console_data.sql: New SQL data for A.C.

	* images/op9.gif: New icon for operation menu.

	* operation/active_console/index.php: Main index for A.C. this
	includes now a require function for config.php.

	* operation/active_console/imagenes/*: Lots of images for
	A.C. Need to be ordered or something.

	* operation/active_console/scripts/*: Most of the Javascript code
	for the A.C is here.

	* operation/active_console/lib/*: Main include PHP code for A.C

	* operation/active_console/styles/*: CSS Styles for A.C.

	* pandora_graphical_console.INSTALL: How to install A.C

	* include/styles/cb/: Unused, deleted.

	* include/styles/op.css: Changes need to activate new A.C option.

	* include/languages/language_en.php: New string for A.C

	* operation/menu.php: New menu option.

	* include/config.php: New version and set error reporting to 0. At
	this time A.C reports many warnings and notices and dont work
	properly, so keep this low at the moment.
	
2007-01-04 Manuel Arostegui <marostegui@artica.es>

	* pandora_console.spec: Now pandora console is installed
	  with the correct name, not with the release name after
	  "pandora_console".
