@@ -33,11 +33,11 @@ $attachment_store="/var/www/pandora_console";	//This is directory where placed "
 $config_fontpath = "../reporting/FreeSans.ttf";	// Change this to your font folder, if needed.
 
 // Do not display any ERROR
-// error_reporting(0);
-
-// Display all errores, warnings and notices
-// error_reporting(E_ALL);
 error_reporting(0);
+
+// Uncomment next  to Display all errors, warnings and notices
+// error_reporting(E_ALL);
+
 // Read rest of config from DB
 if (! mysql_connect($dbhost,$dbuser,$dbpassword)){ 
 //Non-persistent connection. If you want persistent conn change it to mysql_pconnect()
